# StaRT

./: .gitignore  .gitmodules  1  CMakeLists.txt  LICENSE  Makefile  README.md  debug1.txt  rt_load_script.sh  rt_school21_get_bundle.sh  rt_school21_linking.sh  text  update.sh
include/: rt.h  rt_scene.h  rts.h
scripts/: 0_ando.rts  1_sphere.rts  2_spheres.rts  3_plane.rts  4_cylinder.rts  another.rts  default.rts  default_old2.rts
src/: README_MAIN.md  main.c  main_check.c  rt.c  rt.h  rt_types.h
src/cam/: cam.h  cam_add.c  cam_init.c  cam_remove.c  cam_types.h
src/cmd/: README_PARSE.md  add.c  cmd.h  cmd_add.c  cmd_add.h  cmd_error.c  cmd_ls.c  cmd_parce_command.c  cmd_parse.c  cmd_parse_switch.c  cmd_parse_tree.c  cmd_read.c  cmd_read_num.c  cmd_render.h  cmd_rm.c  cmd_set.h  cmd_set_plane.c  cmd_set_sphere.c  cmd_types.h  cmd_utils.c  cmd_valid.c  cmd_vfx.h
src/cmd/add/: cmd_add.c  cmd_add_camera.c  cmd_add_cone.c  cmd_add_copy.c  cmd_add_cylinder.c  cmd_add_extra.c  cmd_add_group.c  cmd_add_light.c  cmd_add_material.c  cmd_add_plane.c  cmd_add_sphere.c  cmd_add_txr.c  cmd_add_txr_to_scn.c
src/cmd/ls/: cmd_ls.c
src/cmd/render/: cmd_on_render.c  cmd_render.c  cmd_render_read.c
src/cmd/rm/: cmd_rm.c  cmd_rm_by_name.c  cmd_rm_material.c
src/cmd/set/: cmd_set.c  cmd_set_camera.c  cmd_set_cone.c  cmd_set_copy.c  cmd_set_cylinder.c  cmd_set_group.c  cmd_set_light.c  cmd_set_material.c  cmd_set_obj.c  cmd_set_obj_to_scn.c  cmd_set_object.c  cmd_set_object_attributes.c  cmd_set_object_param.c  cmd_set_plane.c  cmd_set_prepare_obj.c  cmd_set_sphere.c  cmd_set_transform_part.c  cmd_set_txr.c
src/cmd/utils/: cmd_add_obj_to_scn.c  cmd_read.c  cmd_read_camera.c  cmd_read_light.c  cmd_read_material.c  cmd_read_num.c  cmd_read_png_buf.c  cmd_read_txr.c  cmd_read_txr_png.c  cmd_read_vec.c  cmd_set_obj.c  cmd_set_prepare_obj.c  cmd_set_read_attributes.c  cmd_set_read_part.c  cmd_swich_cond.c  cmd_switch_cond.c
src/cmd/vfx/: cmd_vfx.c  cmd_vfx_sum.c  cmd_vfx_sum_dest.c  cmd_vfx_sum_read.c
src/err/: err.c.demo  err.h  msg_err.c  msg_ok.c  msg_warn.c  rt_err.c  rt_warn.c
src/err/demo/: demo_err.c
src/fio/: fio.h  fio_png_read.c  fio_png_read_buf.c  fio_png_reader.c  fio_png_stride.c  fio_png_test.c.demo  fio_png_write.c  fio_read_png_buf.c
src/gpu/: README_GPU.md  gpu.c.demo  gpu.h  gpu_buffer_lights.c  gpu_buffer_load.c  gpu_buffer_materials.c  gpu_buffer_objects.c  gpu_init.c  gpu_kernel_run.c  gpu_mat.h  gpu_objects.h  gpu_render.c  gpu_types.h
src/gpu/mtl/: _mtl_lib_load.c.demo  mtl.h  mtl.swift  mtl_start.swift  mtl_texture.swift
src/gpu/mtl/shaders/: rt_mtl___kernel.metal
src/gpu/vlk/: vlk.h  vlk_init.c
src/grp/: grp.h  grp_init.c  grp_remove_by_name.c
src/gui/: 1_old.c.demo  base  gui.h  gui_builder.c  gui_css.c.demo  gui_gtk_tree_view.c  gui_init.c  gui_list_widgets.c  gui_singals.c  gui_style.c  gui_types.h  layout_editor copy.glade  layout_editor.glade  layout_editor.glade~  theme.css
src/gui/ui/: #builder.ui1#  #builder_new.ui#  builder.ui  builder.ui~  builder_new.ui  builder_new.ui~  r
src/lgt/: lgt.h  lgt_init.c  lgt_types.h
src/mat/: README_MAT_RU.md  mat.h  mat_add.c  mat_init.c  mat_remove.c  mat_types.h
src/mtl/: Makefile  _mtl_lib_load.c.demo  _mtl_materials.c.demo  fio_png_write.c  mtl.h  mtl.swift  mtl_buffer.swift  mtl_shader_list.txt  mtl_start.swift  mtl_texture.swift  txr_reading_tmp.c
src/mtl/shaders/: metal_shader.metal  metal_struct.metal  rt_mtl___kernel.metal  rt_trace_mod_ggx.metal
src/scn/: README_SCENE.md  README_SCN_RU.md  check_arguments.c  cone.c  cylinder.c  plane.c  scn.h  scn_add.h  scn_add_material.c  scn_add_sphere.c  scn_check_arguments.c  scn_demo.c.demo  scn_demo_1.c.demo  scn_get_mat.c  scn_get_obj.c  scn_get_shape.c  scn_hash_map.c  scn_id.c  scn_id.h  scn_init.c  scn_map.c  scn_map.h  scn_map_add.c  scn_map_del.c  scn_name.c  scn_objects.h  scn_set_plane.c  scn_set_sphere.c  scn_types.h
src/scn/add/: scn_add_cam.c  scn_add_ligth.c  scn_add_mat.c  scn_add_obj.c  scn_add_to_group.c  scn_add_to_group_copy.c  scn_add_to_group_grp.c  scn_add_to_group_obj.c  scn_add_txr.c
src/scn/get/: scn_get_cam_by_name.c  scn_get_mat_by_name.c  scn_get_num_of.c  scn_get_obj_by_id.c  scn_get_obj_by_name.c  scn_get_obj_num.c  scn_get_obj_num.c.old  scn_get_txr_by_name.c
src/scn/move/: scn_move_obj.c
src/scn/print/: scn_print.c  scn_print_cam.c  scn_print_grp.c  scn_print_mat.c  scn_print_obj.c  scn_print_txr.c
src/scn/remove/: scn_remove_by_name_cam.c  scn_remove_by_name_copy.c  scn_remove_by_name_grp.c  scn_remove_by_name_lgt.c  scn_remove_by_name_mat.c  scn_remove_by_name_obj.c  scn_remove_by_name_txr.c
src/scn/utils/: scn_del_copies_of.c  scn_group_mem.c  scn_name.c
src/shp/: README_SHP_RU.md  shp.h  shp_types.h
src/srv/: README.md  srv.c.demo  srv.h  srv_deinit.c  srv_exit.c  srv_ext.c  srv_ext_client.c  srv_ext_data.c  srv_init.c  srv_loop.c  srv_parse.c  srv_request.c  srv_shutdown.c  srv_types.h  srv_utils.c
src/srv/parse/: README.md
src/tfm/: README_TFM_RU.md  tfm.h  tfm_apply.c  tfm_init.c  tfm_move.c  tfm_types.h
src/txr/: README_TXR_RU.md  txr.h  txr_add.c  txr_bw_to_type.c  txr_init.c  txr_put_txr.c  txr_remove.c  txr_rgb_to_type.c  txr_rgba_to_rgb.c  txr_rgba_to_type.c  txr_sum.c  txr_types.h
src/vlk/: vlk.h  vlk_init.c
